// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`color > 42 > cmyk 1`] = `
[
  0.37,
  0.95,
  0.73,
  0.6,
]
`;

exports[`color > 42 > colorByCSSColorSpace 1`] = `
[
  0.3745,
  0.9507,
  0.732,
]
`;

exports[`color > 42 > cssSupportedFunction 1`] = `"hsla"`;

exports[`color > 42 > cssSupportedSpace 1`] = `"display-p3"`;

exports[`color > 42 > hsl 1`] = `
[
  135,
  0.95,
  0.73,
]
`;

exports[`color > 42 > human 1`] = `"grey"`;

exports[`color > 42 > hwb 1`] = `
[
  135,
  0.95,
  0.73,
]
`;

exports[`color > 42 > lab 1`] = `
[
  0.37454,
  90.1429,
  46.3988,
]
`;

exports[`color > 42 > lch 1`] = `
[
  0.37454,
  218.7,
  168.4,
]
`;

exports[`color > 42 > rgb 1`] = `"#8efd33"`;

exports[`color > 42 > space 1`] = `"Rec. 709"`;

exports[`color > 1211 > cmyk 1`] = `
[
  0.93,
  0.89,
  0.23,
  1,
]
`;

exports[`color > 1211 > colorByCSSColorSpace 1`] = `
[
  0.9285,
  0.8935,
  0.2256,
]
`;

exports[`color > 1211 > cssSupportedFunction 1`] = `"lch"`;

exports[`color > 1211 > cssSupportedSpace 1`] = `"prophoto-rgb"`;

exports[`color > 1211 > hsl 1`] = `
[
  334,
  0.89,
  0.23,
]
`;

exports[`color > 1211 > human 1`] = `"azure"`;

exports[`color > 1211 > hwb 1`] = `
[
  334,
  0.89,
  0.23,
]
`;

exports[`color > 1211 > lab 1`] = `
[
  0.92852,
  78.6943,
  -54.8858,
]
`;

exports[`color > 1211 > lch 1`] = `
[
  0.92852,
  205.5,
  51.9,
]
`;

exports[`color > 1211 > rgb 1`] = `"#dd5fee"`;

exports[`color > 1211 > space 1`] = `"HKS"`;

exports[`color > 1337 > cmyk 1`] = `
[
  0.26,
  0.16,
  0.28,
  0.46,
]
`;

exports[`color > 1337 > colorByCSSColorSpace 1`] = `
[
  0.262,
  0.1587,
  0.2781,
]
`;

exports[`color > 1337 > cssSupportedFunction 1`] = `"hsl"`;

exports[`color > 1337 > cssSupportedSpace 1`] = `"display-p3"`;

exports[`color > 1337 > hsl 1`] = `
[
  94,
  0.16,
  0.28,
]
`;

exports[`color > 1337 > human 1`] = `"black"`;

exports[`color > 1337 > hwb 1`] = `
[
  94,
  0.16,
  0.28,
]
`;

exports[`color > 1337 > lab 1`] = `
[
  0.262025,
  -68.2632,
  -44.3747,
]
`;

exports[`color > 1337 > lch 1`] = `
[
  0.262025,
  36.5,
  64,
]
`;

exports[`color > 1337 > rgb 1`] = `"#636a7b"`;

exports[`color > 1337 > space 1`] = `"ProPhoto RGB Color Space"`;
